[package]
name = "wisp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"                                  # For cleaner error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                 # For parsing CONNECT options
lazy_static = "1.4"
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1.88"
submap = "0.3.5"
itoa = "1.0.15"
dashmap = "5.5"
ahash = "0.8"
